<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="5"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/hint1"
            android:textSize="18sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hintOp"
            android:textSize="24sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/hint2"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/layout_numbers_bg"
        android:layout_weight="4">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/button_bg"
                android:textColor="#22FF22"
                android:text="@string/n_1" />

            <Button
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/button_bg"
                android:textColor="#22FF22"
                android:text="@string/n_2" />

            <Button
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/button_bg"
                android:textColor="#22FF22"
                android:text="@string/n_3" />

            <Button
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/button_bg"
                android:textColor="#FF2222"
                android:text="@string/add" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/button_bg"
                android:textColor="#22FF22"
                android:text="@string/n_4" />

            <Button
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/button_bg"
                android:textColor="#22FF22"
                android:text="@string/n_5" />

            <Button
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/button_bg"
                android:textColor="#22FF22"
                android:text="@string/n_6" />

            <Button
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/button_bg"
                android:textColor="#FF2222"
                android:text="@string/subtract" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/button_bg"
                android:textColor="#22FF22"
                android:text="@string/n_7" />

            <Button
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/button_bg"
                android:textColor="#22FF22"
                android:text="@string/n_8" />

            <Button
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/button_bg"
                android:textColor="#22FF22"
                android:text="@string/n_9" />

            <Button
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/button_bg"
                android:textColor="#FF2222"
                android:text="@string/multiply" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/button_bg" />

            <Button
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/button_bg"
                android:textColor="#22FF22"
                android:text="@string/n_0" />

            <Button
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/button_bg"
                android:textColor="#22FF22"
                android:text="@string/btnResult" />

            <Button
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/button_bg"
                android:textColor="#FF2222"
                android:text="@string/divide" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>