<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="9"
        android:gravity="center"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/hint1"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/hintOp"
            android:textSize="24sp" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/hint2"
            android:textSize="18sp" />

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:rowCount="4"
        android:columnCount="4"
        android:gravity="center"
        android:background="@drawable/layout_numbers_bg"
        >

        <Button
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/button_bg" />
        <Button
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/button_bg" />
        <Button
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/button_bg" />
        <Button
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/button_bg" />
        <Button
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/button_bg" />
        <Button
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/button_bg" />
        <Button
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/button_bg" />
        <Button
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/button_bg" />
        <Button
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/button_bg" />
        <Button
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/button_bg" />
        <Button
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/button_bg" />
        <Button
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/button_bg" />
        <Button
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/button_bg" />
        <Button
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/button_bg" />
        <Button
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/button_bg" />
        <Button
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/button_bg" />



    </GridLayout>

</LinearLayout>